# kworld_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1-Chunker.ipynb  2_Embedder.ipynb  3-Conversational_Agent.ipynb
src/kworld_ai/: main.py
