[tool.poetry]
name = "kworld-ai"
version = "0.1.0"
description = ""
authors = ["Juan Roesel <juanroesel@gmail.com.com>"]
readme = "README.md"
packages = [{include = "kworld_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
